--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "new-cap": 0,
     "react/prop-types": 0,
     "react/jsx-space-before-closing": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "react/no-multi-comp": 0
   }
 }
